--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
         display: grid;
         grid-template-columns: 320px minmax(0, 1fr) 360px;
         grid-template-rows: auto minmax(0, 1fr) auto;
+        height: 100vh;
+        max-height: 100vh;
         min-height: 100vh;
         gap: 0;
         transition: background 0.3s ease;
@@ -47,6 +49,8 @@
       body.fullscreen {
         grid-template-columns: 0 minmax(0, 1fr) 0;
         background: #050608;
+        height: 100vh;
+        max-height: 100vh;
       }
       @media (max-width: 1280px) {
         body {
@@ -62,6 +66,12 @@
         }
         .panel-left {
           display: none;
+        }
+        .section-body {
+          grid-template-columns: minmax(0, 1fr);
+        }
+        .section-body > * {
+          grid-column: span 1;
         }
       }
       .app-header {
@@ -95,7 +105,8 @@
       .panel {
         grid-row: 2;
         height: 100%;
-        overflow: auto;
+        overflow-y: auto;
+        overflow-x: hidden;
         padding: 20px 22px;
         display: flex;
         flex-direction: column;
@@ -104,6 +115,7 @@
         border-right: 1px solid var(--color-border);
         min-height: 0;
         min-width: 0;
+        align-items: stretch;
       }
       .panel-left {
         grid-column: 1;
@@ -174,6 +186,7 @@
         display: flex;
         flex-direction: column;
         overflow: hidden;
+        flex: 0 0 auto;
       }
       .section-header {
         cursor: pointer;
@@ -221,11 +234,21 @@
       .ui-section:not(.is-collapsed) .section-chevron {
         transform: rotate(90deg);
       }
+      .ui-section.is-collapsed .section-body {
+        display: none;
+      }
       .section-body {
         display: grid;
-        grid-template-columns: minmax(0, 1fr);
-        gap: 10px;
+        grid-template-columns: repeat(2, minmax(0, 1fr));
+        gap: 12px;
         padding: 12px;
+      }
+      .section-body > * {
+        grid-column: span 2;
+      }
+      .section-body > .pill-row,
+      .section-body > .bool-row {
+        grid-column: span 1;
       }
       .control-row {
         display: grid;
@@ -330,6 +353,36 @@
         min-width: 44px;
         text-align: right;
       }
+      .bool-row {
+        display: flex;
+        gap: 8px;
+      }
+      .bool-button {
+        flex: 1 1 100%;
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+        min-height: 36px;
+        padding: 0 18px;
+        border-radius: 12px;
+        border: 1px solid var(--color-border);
+        background: rgba(148, 163, 184, 0.12);
+        color: var(--color-text);
+        font-size: 12px;
+        font-weight: 600;
+        cursor: pointer;
+        transition: background 0.2s ease, border-color 0.2s ease, color 0.2s ease;
+        width: 100%;
+      }
+      .bool-button.is-active {
+        background: var(--color-primary);
+        border-color: var(--color-border-strong);
+        color: var(--color-primary-contrast);
+      }
+      .bool-button:focus-visible {
+        outline: none;
+        box-shadow: 0 0 0 2px rgba(59, 130, 246, 0.25);
+      }
       .btn-primary,
       .btn-secondary,
       .btn-pill {
@@ -361,6 +414,13 @@
         background: rgba(59, 130, 246, 0.12);
         border-color: rgba(59, 130, 246, 0.35);
         color: var(--color-primary);
+      }
+      .pill-row {
+        display: flex;
+        gap: 8px;
+      }
+      .pill-row .btn-pill {
+        flex: 1 1 100%;
       }
       .control-static {
         font-size: 12px;
