--- a/index.html
+++ b/index.html
@@ -466,6 +466,31 @@ body.fullscreen {
   border-color: rgba(59, 130, 246, 0.35);
   color: var(--color-primary);
 }
+.run-toggle-row {
+  margin-top: 4px;
+}
+.run-toggle {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  padding: 8px 16px;
+  border-radius: 999px;
+  border: 1px solid var(--color-border);
+  background: rgba(59, 130, 246, 0.12);
+  color: var(--color-text);
+  font-weight: 600;
+  transition: background 0.2s ease, color 0.2s ease, border-color 0.2s ease;
+}
+.run-toggle.is-active {
+  background: var(--color-primary);
+  border-color: var(--color-border-strong);
+  color: var(--color-primary-contrast);
+}
+.run-toggle:not(.is-active) {
+  color: var(--color-text);
+  background: rgba(59, 130, 246, 0.08);
+}
 .pill-row {
   display: flex;
   gap: 8px;
