--- a/index.html
+++ b/index.html
@@ -410,6 +410,26 @@ body.fullscreen {
   width: 100%;
   gap: 8px;
 }
+.bool-label {
+  position: relative;
+  width: 100%;
+}
+.bool-label input[type='checkbox'] {
+  position: absolute;
+  inset: 0;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  opacity: 0;
+  cursor: pointer;
+}
+.bool-label .bool-text {
+  display: block;
+  width: 100%;
+  text-align: center;
+  line-height: 1.35;
+  pointer-events: none;
+}
 .bool-button {
   flex: 1 1 100%;
   display: inline-flex;
@@ -422,7 +442,8 @@ body.fullscreen {
   background: rgba(148, 163, 184, 0.12);
   color: var(--color-text);
   font-size: 12px;
-  font-weight: 600;
+  font-weight: 400;
+  text-align: center;
   cursor: pointer;
   transition: background 0.2s ease, border-color 0.2s ease, color 0.2s ease;
   width: 100%;
@@ -432,7 +453,8 @@ body.fullscreen {
   border-color: var(--color-border-strong);
   color: var(--color-primary-contrast);
 }
-.bool-button:focus-visible {
+.bool-button:focus-visible,
+.bool-button.has-focus {
   outline: none;
   box-shadow: 0 0 0 2px rgba(59, 130, 246, 0.25);
 }
