--- a/index.html
+++ b/index.html
@@ -156,12 +156,16 @@ body.fullscreen {
   background: radial-gradient(circle at 50% 25%, rgba(59, 130, 246, 0.22), rgba(15, 23, 42, 0.95));
   min-height: 0;
   min-width: 0;
+  z-index: 0;
 }
 .viewer canvas[data-testid="viewer-canvas"] {
+  position: absolute;
+  inset: 0;
   width: 100%;
   height: 100%;
   display: block;
-  background: transparent;
+  background: #101424;
+  z-index: 0;
 }
 .overlay-stack {
   position: absolute;
