--- a/index.html
+++ b/index.html
@@ -539,19 +539,22 @@ body.fullscreen {
   padding-bottom: 4px;
 }
 .toast {
-  position: fixed;
+  position: absolute;
   right: 24px;
   bottom: 24px;
   padding: 12px 18px;
-  background: rgba(30, 140, 255, 0.12);
+  background: rgba(255, 255, 255, 0.08);
   border-radius: 12px;
-  border: 1px solid rgba(30, 140, 255, 0.35);
+  border: 1px solid rgba(15, 23, 42, 0.35);
+  color: #0f172a;
   font-size: 13px;
+  max-width: min(320px, 45%);
   opacity: 0;
   transform: translateY(12px);
   transition: opacity 0.2s ease, transform 0.2s ease;
   pointer-events: none;
-  backdrop-filter: blur(12px);
+  backdrop-filter: blur(10px);
+  z-index: 5;
 }
 .toast.visible {
   opacity: 1;
@@ -647,11 +650,11 @@ body.layout-main {
      Sensor overlay • Sensor readouts.
     </div>
    </div>
+   <div class="toast" data-testid="toast">
+   </div>
   </main>
   <aside class="panel panel-right" data-testid="panel-right">
   </aside>
-  <div class="toast" data-testid="toast">
-  </div>
   <footer class="app-footer" role="contentinfo">
    Hotkeys: Space (run/pause) • F1/F2/F3/F4 overlays • Tab toggles sidebars • [ / ] camera cycle
   </footer>
