feat: wire history and watch ui

--- a/index.html
+++ b/index.html
@@ -306,6 +306,17 @@ body.fullscreen {
   max-width: 100%;
   min-width: 0;
 }
+.control-field .static-value {
+  margin-left: auto;
+  font-variant-numeric: tabular-nums;
+  font-size: 13px;
+  color: var(--color-text);
+  text-align: right;
+  min-width: 0;
+}
+.control-field .static-value.is-muted {
+  color: var(--color-text-muted);
+}
 .action-row {
   display: flex;
   align-items: stretch;
