wip: equality ui + behavior

--- a/dev/index.html
+++ b/dev/index.html
@@ -444,6 +444,9 @@ body.fullscreen {
   text-align: center;
   line-height: 1.35;
   pointer-events: none;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 .bool-button {
   flex: 1 1 100%;
@@ -673,5 +676,3 @@ body.layout-main {
   </script>
  </body>
 </html>
-
-
