Use primary style for file and simulation buttons

--- a/dev/index.html
+++ b/dev/index.html
@@ -322,7 +322,7 @@ body.fullscreen {
   align-items: stretch;
   gap: 8px;
 }
-.action-row > * {
+.action-row button {
   flex: 1 1 100%;
 }
 .compact-pills {
@@ -505,6 +505,14 @@ body.fullscreen {
   background: rgba(59, 130, 246, 0.12);
   border-color: rgba(59, 130, 246, 0.35);
   color: var(--color-primary);
+}
+.btn-secondary:hover {
+  background: rgba(148, 163, 184, 0.2);
+  border-color: var(--color-border-strong);
+}
+.btn-pill:hover {
+  background: rgba(59, 130, 246, 0.18);
+  border-color: var(--color-border-strong);
 }
 .btn-primary:hover,
 .btn-secondary:hover,
