feat: add parent selection and camera hotkeys

--- a/dev/index.html
+++ b/dev/index.html
@@ -724,10 +724,16 @@ body.layout-main {
        <div class="help-desc">Toggle Left / Right UI</div>
        <div class="help-key">[  ]</div>
        <div class="help-desc">Cycle cameras</div>
+       <div class="help-key">Page Up</div>
+       <div class="help-desc">Select parent body</div>
        <div class="help-key">Esc</div>
        <div class="help-desc">Return to Free camera</div>
        <div class="help-key">Double-click</div>
        <div class="help-desc">Select body / geom</div>
+       <div class="help-key">Right double-click</div>
+       <div class="help-desc">Center camera on picked body</div>
+       <div class="help-key">Ctrl Right double-click</div>
+       <div class="help-desc">Switch to tracking camera</div>
        <div class="help-key">Scroll / middle drag</div>
        <div class="help-desc">Zoom</div>
        <div class="help-key">Left drag</div>
@@ -747,12 +753,6 @@ body.layout-main {
       <div class="help-grid">
        <div class="help-key">+  -</div>
        <div class="help-desc">Real-time scale (not wired yet)</div>
-       <div class="help-key">Page Up</div>
-       <div class="help-desc">Select parent body (TBD)</div>
-       <div class="help-key">Right double-click</div>
-       <div class="help-desc">Center camera on selection (TBD)</div>
-       <div class="help-key">Ctrl Right double-click</div>
-       <div class="help-desc">Switch to tracking camera (TBD)</div>
        <div class="help-key">F3</div>
        <div class="help-desc">Profiler overlay (not implemented)</div>
        <div class="help-key">F4</div>
